fixed layout issue

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 
 body {
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     color: #a9a9a9;
     font-family: Arial, Helvetica, sans-serif;
 
@@ -114,12 +114,18 @@ nav ul li {
     width: 30%;
     display: flex;
     justify-content: flex-end;
+    padding: 5px;
+    margin-right: auto;
 
 }
 
 .sidebar h2 {
-    font-size: 250%;
-    margin-right: 3%;
+    font-size: 200%;
+    margin: 3%;
+}
+
+.contact-info p {
+    font-size: .9em;
 }
 
 /* .contact-sidebar {
@@ -196,7 +202,8 @@ nav ul li {
 
 @media screen and (max-width:1268px) {
     .contact-content {
-        width: 100%;
+        width: 70%;
+        padding: 5px;
         flex-wrap: wrap;
         display: flex;
         justify-content: space-between;
@@ -204,22 +211,27 @@ nav ul li {
 
     .contact-info {
         width: 50%;
+        padding: 5px;
+        margin: 3px;
+
     }
 }
 
 @media screen and (max-width:768px) {
     .contact-content {
-        width: 100%;
+        width: 70%;
         flex-wrap: wrap;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .contact-info {
+        width: 70%;
         display: flex;
         justify-content: space-evenly;
     }
 
-    .contact-info {
-        width: 100%;
-        display: flex;
-        justify-content: space-evenly;
-    }
+
 
     /* .contact-content {
         width: 40%;
